@@ -655,7 +655,7 @@
       <module id="vinagre" branch="gnome-2-22"/>
       <module id="vino" branch="gnome-2-22"/>
       <module id="vte"/>
-      <module id="yelp" branch="gnome-2-22"/>
+      <module id="yelp" branch="GNOME-2-22"/>
       <module id="zenity" branch="gnome-2-22"/>
     </category>
 
