@@ -1,3 +1,8 @@
+2008-06-22  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* releases.xml.in:
+	* translation-teams.xml.in: Seems that yelp was branched to GNOME-2-22, not gnome-2-22.
+
 2008-06-19  Claude Paroz  <claude@2xlibre.net>
 
 	* people.xml.in:
